# serializer version: 1
# name: TestFunnelStrictStepsPersons.test_strict_funnel_person_recordings
  '''
  
  SELECT aggregation_target AS actor_id,
         step_0_matching_events as matching_events
  FROM
    (SELECT aggregation_target,
            steps,
            avg(step_1_conversion_time) step_1_average_conversion_time_inner,
            avg(step_2_conversion_time) step_2_average_conversion_time_inner,
            median(step_1_conversion_time) step_1_median_conversion_time_inner,
            median(step_2_conversion_time) step_2_median_conversion_time_inner ,
            groupArray(10)(step_0_matching_event) as step_0_matching_events,
            groupArray(10)(step_1_matching_event) as step_1_matching_events,
            groupArray(10)(step_2_matching_event) as step_2_matching_events,
            groupArray(10)(final_matching_event) as final_matching_events
     FROM
       (SELECT aggregation_target,
               steps,
               max(steps) over (PARTITION BY aggregation_target) as max_steps,
                               step_1_conversion_time,
                               step_2_conversion_time ,
                               ("latest_0",
                                "uuid_0",
                                "$session_id_0",
                                "$window_id_0") as step_0_matching_event,
                               ("latest_1",
                                "uuid_1",
                                "$session_id_1",
                                "$window_id_1") as step_1_matching_event,
                               ("latest_2",
                                "uuid_2",
                                "$session_id_2",
                                "$window_id_2") as step_2_matching_event,
                               if(isNull(latest_0),(null, null, null, null),if(isNull(latest_1), step_0_matching_event, if(isNull(latest_2), step_1_matching_event, step_2_matching_event))) as final_matching_event
        FROM
          (SELECT *,
                  if(latest_0 <= latest_1
                     AND latest_1 <= latest_0 + INTERVAL 7 DAY
                     AND latest_1 <= latest_2
                     AND latest_2 <= latest_0 + INTERVAL 7 DAY, 3, if(latest_0 <= latest_1
                                                                      AND latest_1 <= latest_0 + INTERVAL 7 DAY, 2, 1)) AS steps,
                  if(isNotNull(latest_1)
                     AND latest_1 <= latest_0 + INTERVAL 7 DAY, dateDiff('second', toDateTime(latest_0), toDateTime(latest_1)), NULL) step_1_conversion_time,
                  if(isNotNull(latest_2)
                     AND latest_2 <= latest_1 + INTERVAL 7 DAY, dateDiff('second', toDateTime(latest_1), toDateTime(latest_2)), NULL) step_2_conversion_time,
                  ("latest_0",
                   "uuid_0",
                   "$session_id_0",
                   "$window_id_0") as step_0_matching_event,
                  ("latest_1",
                   "uuid_1",
                   "$session_id_1",
                   "$window_id_1") as step_1_matching_event,
                  ("latest_2",
                   "uuid_2",
                   "$session_id_2",
                   "$window_id_2") as step_2_matching_event,
                  if(isNull(latest_0),(null, null, null, null),if(isNull(latest_1), step_0_matching_event, if(isNull(latest_2), step_1_matching_event, step_2_matching_event))) as final_matching_event
           FROM
             (SELECT aggregation_target, timestamp, step_0,
                                                    latest_0,
                                                    "uuid_0",
                                                    "$session_id_0",
                                                    "$window_id_0",
                                                    step_1,
                                                    min(latest_1) over (PARTITION by aggregation_target
                                                                        ORDER BY timestamp DESC ROWS BETWEEN 1 PRECEDING AND 1 PRECEDING) latest_1,
                                                                       min("uuid_1") over (PARTITION by aggregation_target
                                                                                           ORDER BY timestamp DESC ROWS BETWEEN 1 PRECEDING AND 1 PRECEDING) "uuid_1",
                                                                                          min("$session_id_1") over (PARTITION by aggregation_target
                                                                                                                     ORDER BY timestamp DESC ROWS BETWEEN 1 PRECEDING AND 1 PRECEDING) "$session_id_1",
                                                                                                                    min("$window_id_1") over (PARTITION by aggregation_target
                                                                                                                                              ORDER BY timestamp DESC ROWS BETWEEN 1 PRECEDING AND 1 PRECEDING) "$window_id_1",
                                                                                                                                             step_2,
                                                                                                                                             min(latest_2) over (PARTITION by aggregation_target
                                                                                                                                                                 ORDER BY timestamp DESC ROWS BETWEEN 2 PRECEDING AND 2 PRECEDING) latest_2,
                                                                                                                                                                min("uuid_2") over (PARTITION by aggregation_target
                                                                                                                                                                                    ORDER BY timestamp DESC ROWS BETWEEN 2 PRECEDING AND 2 PRECEDING) "uuid_2",
                                                                                                                                                                                   min("$session_id_2") over (PARTITION by aggregation_target
                                                                                                                                                                                                              ORDER BY timestamp DESC ROWS BETWEEN 2 PRECEDING AND 2 PRECEDING) "$session_id_2",
                                                                                                                                                                                                             min("$window_id_2") over (PARTITION by aggregation_target
                                                                                                                                                                                                                                       ORDER BY timestamp DESC ROWS BETWEEN 2 PRECEDING AND 2 PRECEDING) "$window_id_2"
              FROM
                (SELECT e.timestamp as timestamp,
                        if(notEmpty(pdi.distinct_id), pdi.person_id, e.person_id) as aggregation_target,
                        e.uuid AS uuid,
                        if(notEmpty(pdi.distinct_id), pdi.person_id, e.person_id) as person_id,
                        if(event = 'step one', 1, 0) as step_0,
                        if(step_0 = 1, timestamp, null) as latest_0,
                        if(step_0 = 1, "uuid", null) as "uuid_0",
                        if(step_0 = 1, "$session_id", null) as "$session_id_0",
                        if(step_0 = 1, "$window_id", null) as "$window_id_0",
                        if(event = 'step two', 1, 0) as step_1,
                        if(step_1 = 1, timestamp, null) as latest_1,
                        if(step_1 = 1, "uuid", null) as "uuid_1",
                        if(step_1 = 1, "$session_id", null) as "$session_id_1",
                        if(step_1 = 1, "$window_id", null) as "$window_id_1",
                        if(event = 'step three', 1, 0) as step_2,
                        if(step_2 = 1, timestamp, null) as latest_2,
                        if(step_2 = 1, "uuid", null) as "uuid_2",
                        if(step_2 = 1, "$session_id", null) as "$session_id_2",
                        if(step_2 = 1, "$window_id", null) as "$window_id_2"
                 FROM events e
                 LEFT OUTER JOIN
                   (SELECT distinct_id,
                           argMax(person_id, version) as person_id
                    FROM person_distinct_id2
                    WHERE team_id = 99999
                      AND distinct_id IN
                        (SELECT distinct_id
                         FROM events
                         WHERE team_id = 99999
                           AND toTimeZone(timestamp, 'UTC') >= toDateTime('2021-01-01 00:00:00', 'UTC')
                           AND toTimeZone(timestamp, 'UTC') <= toDateTime('2021-01-08 23:59:59', 'UTC') )
                    GROUP BY distinct_id
                    HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
                 WHERE team_id = 99999
                   AND toTimeZone(timestamp, 'UTC') >= toDateTime('2021-01-01 00:00:00', 'UTC')
                   AND toTimeZone(timestamp, 'UTC') <= toDateTime('2021-01-08 23:59:59', 'UTC')
                   AND (1=1) ))
           WHERE step_0 = 1 ))
     GROUP BY aggregation_target,
              steps
     HAVING steps = max(max_steps))
  WHERE steps IN [1, 2, 3]
  ORDER BY aggregation_target
  LIMIT 100
  OFFSET 0 SETTINGS max_ast_elements=1000000,
                    max_expanded_ast_elements=1000000
  '''
# ---
# name: TestFunnelStrictStepsPersons.test_strict_funnel_person_recordings.1
  '''
  
  SELECT DISTINCT session_id
  FROM session_replay_events
  WHERE team_id = 99999
    and session_id in ['s1']
    AND min_first_timestamp >= '2020-12-31 00:00:00'
    AND max_last_timestamp <= '2021-01-09 23:59:59'
  '''
# ---
# name: TestFunnelStrictStepsPersons.test_strict_funnel_person_recordings.2
  '''
  
  SELECT aggregation_target AS actor_id,
         step_1_matching_events as matching_events
  FROM
    (SELECT aggregation_target,
            steps,
            avg(step_1_conversion_time) step_1_average_conversion_time_inner,
            avg(step_2_conversion_time) step_2_average_conversion_time_inner,
            median(step_1_conversion_time) step_1_median_conversion_time_inner,
            median(step_2_conversion_time) step_2_median_conversion_time_inner ,
            groupArray(10)(step_0_matching_event) as step_0_matching_events,
            groupArray(10)(step_1_matching_event) as step_1_matching_events,
            groupArray(10)(step_2_matching_event) as step_2_matching_events,
            groupArray(10)(final_matching_event) as final_matching_events
     FROM
       (SELECT aggregation_target,
               steps,
               max(steps) over (PARTITION BY aggregation_target) as max_steps,
                               step_1_conversion_time,
                               step_2_conversion_time ,
                               ("latest_0",
                                "uuid_0",
                                "$session_id_0",
                                "$window_id_0") as step_0_matching_event,
                               ("latest_1",
                                "uuid_1",
                                "$session_id_1",
                                "$window_id_1") as step_1_matching_event,
                               ("latest_2",
                                "uuid_2",
                                "$session_id_2",
                                "$window_id_2") as step_2_matching_event,
                               if(isNull(latest_0),(null, null, null, null),if(isNull(latest_1), step_0_matching_event, if(isNull(latest_2), step_1_matching_event, step_2_matching_event))) as final_matching_event
        FROM
          (SELECT *,
                  if(latest_0 <= latest_1
                     AND latest_1 <= latest_0 + INTERVAL 7 DAY
                     AND latest_1 <= latest_2
                     AND latest_2 <= latest_0 + INTERVAL 7 DAY, 3, if(latest_0 <= latest_1
                                                                      AND latest_1 <= latest_0 + INTERVAL 7 DAY, 2, 1)) AS steps,
                  if(isNotNull(latest_1)
                     AND latest_1 <= latest_0 + INTERVAL 7 DAY, dateDiff('second', toDateTime(latest_0), toDateTime(latest_1)), NULL) step_1_conversion_time,
                  if(isNotNull(latest_2)
                     AND latest_2 <= latest_1 + INTERVAL 7 DAY, dateDiff('second', toDateTime(latest_1), toDateTime(latest_2)), NULL) step_2_conversion_time,
                  ("latest_0",
                   "uuid_0",
                   "$session_id_0",
                   "$window_id_0") as step_0_matching_event,
                  ("latest_1",
                   "uuid_1",
                   "$session_id_1",
                   "$window_id_1") as step_1_matching_event,
                  ("latest_2",
                   "uuid_2",
                   "$session_id_2",
                   "$window_id_2") as step_2_matching_event,
                  if(isNull(latest_0),(null, null, null, null),if(isNull(latest_1), step_0_matching_event, if(isNull(latest_2), step_1_matching_event, step_2_matching_event))) as final_matching_event
           FROM
             (SELECT aggregation_target, timestamp, step_0,
                                                    latest_0,
                                                    "uuid_0",
                                                    "$session_id_0",
                                                    "$window_id_0",
                                                    step_1,
                                                    min(latest_1) over (PARTITION by aggregation_target
                                                                        ORDER BY timestamp DESC ROWS BETWEEN 1 PRECEDING AND 1 PRECEDING) latest_1,
                                                                       min("uuid_1") over (PARTITION by aggregation_target
                                                                                           ORDER BY timestamp DESC ROWS BETWEEN 1 PRECEDING AND 1 PRECEDING) "uuid_1",
                                                                                          min("$session_id_1") over (PARTITION by aggregation_target
                                                                                                                     ORDER BY timestamp DESC ROWS BETWEEN 1 PRECEDING AND 1 PRECEDING) "$session_id_1",
                                                                                                                    min("$window_id_1") over (PARTITION by aggregation_target
                                                                                                                                              ORDER BY timestamp DESC ROWS BETWEEN 1 PRECEDING AND 1 PRECEDING) "$window_id_1",
                                                                                                                                             step_2,
                                                                                                                                             min(latest_2) over (PARTITION by aggregation_target
                                                                                                                                                                 ORDER BY timestamp DESC ROWS BETWEEN 2 PRECEDING AND 2 PRECEDING) latest_2,
                                                                                                                                                                min("uuid_2") over (PARTITION by aggregation_target
                                                                                                                                                                                    ORDER BY timestamp DESC ROWS BETWEEN 2 PRECEDING AND 2 PRECEDING) "uuid_2",
                                                                                                                                                                                   min("$session_id_2") over (PARTITION by aggregation_target
                                                                                                                                                                                                              ORDER BY timestamp DESC ROWS BETWEEN 2 PRECEDING AND 2 PRECEDING) "$session_id_2",
                                                                                                                                                                                                             min("$window_id_2") over (PARTITION by aggregation_target
                                                                                                                                                                                                                                       ORDER BY timestamp DESC ROWS BETWEEN 2 PRECEDING AND 2 PRECEDING) "$window_id_2"
              FROM
                (SELECT e.timestamp as timestamp,
                        if(notEmpty(pdi.distinct_id), pdi.person_id, e.person_id) as aggregation_target,
                        e.uuid AS uuid,
                        if(notEmpty(pdi.distinct_id), pdi.person_id, e.person_id) as person_id,
                        if(event = 'step one', 1, 0) as step_0,
                        if(step_0 = 1, timestamp, null) as latest_0,
                        if(step_0 = 1, "uuid", null) as "uuid_0",
                        if(step_0 = 1, "$session_id", null) as "$session_id_0",
                        if(step_0 = 1, "$window_id", null) as "$window_id_0",
                        if(event = 'step two', 1, 0) as step_1,
                        if(step_1 = 1, timestamp, null) as latest_1,
                        if(step_1 = 1, "uuid", null) as "uuid_1",
                        if(step_1 = 1, "$session_id", null) as "$session_id_1",
                        if(step_1 = 1, "$window_id", null) as "$window_id_1",
                        if(event = 'step three', 1, 0) as step_2,
                        if(step_2 = 1, timestamp, null) as latest_2,
                        if(step_2 = 1, "uuid", null) as "uuid_2",
                        if(step_2 = 1, "$session_id", null) as "$session_id_2",
                        if(step_2 = 1, "$window_id", null) as "$window_id_2"
                 FROM events e
                 LEFT OUTER JOIN
                   (SELECT distinct_id,
                           argMax(person_id, version) as person_id
                    FROM person_distinct_id2
                    WHERE team_id = 99999
                      AND distinct_id IN
                        (SELECT distinct_id
                         FROM events
                         WHERE team_id = 99999
                           AND toTimeZone(timestamp, 'UTC') >= toDateTime('2021-01-01 00:00:00', 'UTC')
                           AND toTimeZone(timestamp, 'UTC') <= toDateTime('2021-01-08 23:59:59', 'UTC') )
                    GROUP BY distinct_id
                    HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
                 WHERE team_id = 99999
                   AND toTimeZone(timestamp, 'UTC') >= toDateTime('2021-01-01 00:00:00', 'UTC')
                   AND toTimeZone(timestamp, 'UTC') <= toDateTime('2021-01-08 23:59:59', 'UTC')
                   AND (1=1) ))
           WHERE step_0 = 1 ))
     GROUP BY aggregation_target,
              steps
     HAVING steps = max(max_steps))
  WHERE steps IN [2, 3]
  ORDER BY aggregation_target
  LIMIT 100
  OFFSET 0 SETTINGS max_ast_elements=1000000,
                    max_expanded_ast_elements=1000000
  '''
# ---
# name: TestFunnelStrictStepsPersons.test_strict_funnel_person_recordings.3
  '''
  
  SELECT DISTINCT session_id
  FROM session_replay_events
  WHERE team_id = 99999
    and session_id in ['s2']
    AND min_first_timestamp >= '2020-12-31 00:00:00'
    AND max_last_timestamp <= '2021-01-09 23:59:59'
  '''
# ---
# name: TestFunnelStrictStepsPersons.test_strict_funnel_person_recordings.4
  '''
  
  SELECT aggregation_target AS actor_id,
         step_1_matching_events as matching_events
  FROM
    (SELECT aggregation_target,
            steps,
            avg(step_1_conversion_time) step_1_average_conversion_time_inner,
            avg(step_2_conversion_time) step_2_average_conversion_time_inner,
            median(step_1_conversion_time) step_1_median_conversion_time_inner,
            median(step_2_conversion_time) step_2_median_conversion_time_inner ,
            groupArray(10)(step_0_matching_event) as step_0_matching_events,
            groupArray(10)(step_1_matching_event) as step_1_matching_events,
            groupArray(10)(step_2_matching_event) as step_2_matching_events,
            groupArray(10)(final_matching_event) as final_matching_events
     FROM
       (SELECT aggregation_target,
               steps,
               max(steps) over (PARTITION BY aggregation_target) as max_steps,
                               step_1_conversion_time,
                               step_2_conversion_time ,
                               ("latest_0",
                                "uuid_0",
                                "$session_id_0",
                                "$window_id_0") as step_0_matching_event,
                               ("latest_1",
                                "uuid_1",
                                "$session_id_1",
                                "$window_id_1") as step_1_matching_event,
                               ("latest_2",
                                "uuid_2",
                                "$session_id_2",
                                "$window_id_2") as step_2_matching_event,
                               if(isNull(latest_0),(null, null, null, null),if(isNull(latest_1), step_0_matching_event, if(isNull(latest_2), step_1_matching_event, step_2_matching_event))) as final_matching_event
        FROM
          (SELECT *,
                  if(latest_0 <= latest_1
                     AND latest_1 <= latest_0 + INTERVAL 7 DAY
                     AND latest_1 <= latest_2
                     AND latest_2 <= latest_0 + INTERVAL 7 DAY, 3, if(latest_0 <= latest_1
                                                                      AND latest_1 <= latest_0 + INTERVAL 7 DAY, 2, 1)) AS steps,
                  if(isNotNull(latest_1)
                     AND latest_1 <= latest_0 + INTERVAL 7 DAY, dateDiff('second', toDateTime(latest_0), toDateTime(latest_1)), NULL) step_1_conversion_time,
                  if(isNotNull(latest_2)
                     AND latest_2 <= latest_1 + INTERVAL 7 DAY, dateDiff('second', toDateTime(latest_1), toDateTime(latest_2)), NULL) step_2_conversion_time,
                  ("latest_0",
                   "uuid_0",
                   "$session_id_0",
                   "$window_id_0") as step_0_matching_event,
                  ("latest_1",
                   "uuid_1",
                   "$session_id_1",
                   "$window_id_1") as step_1_matching_event,
                  ("latest_2",
                   "uuid_2",
                   "$session_id_2",
                   "$window_id_2") as step_2_matching_event,
                  if(isNull(latest_0),(null, null, null, null),if(isNull(latest_1), step_0_matching_event, if(isNull(latest_2), step_1_matching_event, step_2_matching_event))) as final_matching_event
           FROM
             (SELECT aggregation_target, timestamp, step_0,
                                                    latest_0,
                                                    "uuid_0",
                                                    "$session_id_0",
                                                    "$window_id_0",
                                                    step_1,
                                                    min(latest_1) over (PARTITION by aggregation_target
                                                                        ORDER BY timestamp DESC ROWS BETWEEN 1 PRECEDING AND 1 PRECEDING) latest_1,
                                                                       min("uuid_1") over (PARTITION by aggregation_target
                                                                                           ORDER BY timestamp DESC ROWS BETWEEN 1 PRECEDING AND 1 PRECEDING) "uuid_1",
                                                                                          min("$session_id_1") over (PARTITION by aggregation_target
                                                                                                                     ORDER BY timestamp DESC ROWS BETWEEN 1 PRECEDING AND 1 PRECEDING) "$session_id_1",
                                                                                                                    min("$window_id_1") over (PARTITION by aggregation_target
                                                                                                                                              ORDER BY timestamp DESC ROWS BETWEEN 1 PRECEDING AND 1 PRECEDING) "$window_id_1",
                                                                                                                                             step_2,
                                                                                                                                             min(latest_2) over (PARTITION by aggregation_target
                                                                                                                                                                 ORDER BY timestamp DESC ROWS BETWEEN 2 PRECEDING AND 2 PRECEDING) latest_2,
                                                                                                                                                                min("uuid_2") over (PARTITION by aggregation_target
                                                                                                                                                                                    ORDER BY timestamp DESC ROWS BETWEEN 2 PRECEDING AND 2 PRECEDING) "uuid_2",
                                                                                                                                                                                   min("$session_id_2") over (PARTITION by aggregation_target
                                                                                                                                                                                                              ORDER BY timestamp DESC ROWS BETWEEN 2 PRECEDING AND 2 PRECEDING) "$session_id_2",
                                                                                                                                                                                                             min("$window_id_2") over (PARTITION by aggregation_target
                                                                                                                                                                                                                                       ORDER BY timestamp DESC ROWS BETWEEN 2 PRECEDING AND 2 PRECEDING) "$window_id_2"
              FROM
                (SELECT e.timestamp as timestamp,
                        if(notEmpty(pdi.distinct_id), pdi.person_id, e.person_id) as aggregation_target,
                        e.uuid AS uuid,
                        if(notEmpty(pdi.distinct_id), pdi.person_id, e.person_id) as person_id,
                        if(event = 'step one', 1, 0) as step_0,
                        if(step_0 = 1, timestamp, null) as latest_0,
                        if(step_0 = 1, "uuid", null) as "uuid_0",
                        if(step_0 = 1, "$session_id", null) as "$session_id_0",
                        if(step_0 = 1, "$window_id", null) as "$window_id_0",
                        if(event = 'step two', 1, 0) as step_1,
                        if(step_1 = 1, timestamp, null) as latest_1,
                        if(step_1 = 1, "uuid", null) as "uuid_1",
                        if(step_1 = 1, "$session_id", null) as "$session_id_1",
                        if(step_1 = 1, "$window_id", null) as "$window_id_1",
                        if(event = 'step three', 1, 0) as step_2,
                        if(step_2 = 1, timestamp, null) as latest_2,
                        if(step_2 = 1, "uuid", null) as "uuid_2",
                        if(step_2 = 1, "$session_id", null) as "$session_id_2",
                        if(step_2 = 1, "$window_id", null) as "$window_id_2"
                 FROM events e
                 LEFT OUTER JOIN
                   (SELECT distinct_id,
                           argMax(person_id, version) as person_id
                    FROM person_distinct_id2
                    WHERE team_id = 99999
                      AND distinct_id IN
                        (SELECT distinct_id
                         FROM events
                         WHERE team_id = 99999
                           AND toTimeZone(timestamp, 'UTC') >= toDateTime('2021-01-01 00:00:00', 'UTC')
                           AND toTimeZone(timestamp, 'UTC') <= toDateTime('2021-01-08 23:59:59', 'UTC') )
                    GROUP BY distinct_id
                    HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
                 WHERE team_id = 99999
                   AND toTimeZone(timestamp, 'UTC') >= toDateTime('2021-01-01 00:00:00', 'UTC')
                   AND toTimeZone(timestamp, 'UTC') <= toDateTime('2021-01-08 23:59:59', 'UTC')
                   AND (1=1) ))
           WHERE step_0 = 1 ))
     GROUP BY aggregation_target,
              steps
     HAVING steps = max(max_steps))
  WHERE steps = 2
  ORDER BY aggregation_target
  LIMIT 100
  OFFSET 0 SETTINGS max_ast_elements=1000000,
                    max_expanded_ast_elements=1000000
  '''
# ---
# name: TestFunnelStrictStepsPersons.test_strict_funnel_person_recordings.5
  '''
  
  SELECT DISTINCT session_id
  FROM session_replay_events
  WHERE team_id = 99999
    and session_id in ['s2']
    AND min_first_timestamp >= '2020-12-31 00:00:00'
    AND max_last_timestamp <= '2021-01-09 23:59:59'
  '''
# ---
